kubernetes/manifest-files/resourcequota-demo.yaml
# Here we have two Kubernetes resources: a Namespace and a ResourceQuota.
# The Namespace named "dev-team" is created to isolate resources for a development team.
# The ResourceQuota named "dev-quota" is applied to the "dev-team" namespace to limit resource usage.
apiVersion: v1
kind: Namespace
metadata:
  name: dev-team
