kubernetes/manifest-files/secret-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  containers:
  - name: app
    image: alpine
    command: ["/bin/sh", "-c", "env && sleep 3600"]
