kubernetes/manifest-files/serviceaccount-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-pod
spec:
  serviceAccountName: app-sa
  containers:
  - name: app
    image: alpine
    command: ["/bin/sh", "-c", "ls /var/run/secrets/kubernetes.io/serviceaccount && sleep 3600"]
