kubernetes/manifest-files/deployment-service-clusterip.yaml
# Here we have two Kubernetes resources: a Deployment and a Service.
# The Deployment named "web-app" runs 3 replicas of an Nginx web server.
# The Service named "web-service" exposes the Deployment internally within the cluster using a ClusterIP.  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
