kubernetes/manifest-files/service-nodeport.yaml
# Here we have a Kubernetes Service of type NodePort that exposes a web application.
# The Service is named "web-nodeport" and selects pods with the label "app: web".
# It maps port 80 of the Service to port 80 of the pods and exposes it on node port 30080.
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
