kubernetes/manifest-files/ingress-demo.yaml
# This Ingress resource routes HTTP traffic to the web-service based on the host myapp.local.
# It uses the NGINX Ingress controller and rewrites the URL path to '/'.  
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
