kubernetes/manifest-files/netpol-demo.yaml
# This NetworkPolicy denies all ingress and egress traffic to/from the pods.
# Additionally, it allows ingress traffic to pods with the label "app: database" only from pods with the label "app: web" on port 3306 (MySQL).
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-db
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web
    ports:
    - protocol: TCP
      port: 3306
